# BlackMaskAdd

./: .gitignore
ImageMaskTool/: CMakeLists.txt  ImageMaskTool.pro  README.md  build_safe.bat
ImageMaskTool/include/: BlpReader.h  ImageProcessor.h  MainWindow.h
ImageMaskTool/src/: BlpReader.cpp  ImageProcessor.cpp  MainWindow.cpp  main.cpp
